# lump-sum-vs-dca

./: .gitignore  LICENSE  README.md  jupyter-lite.json  overrides.json  pyproject.toml
.github/workflows/: deploy.yml
content/: dca_vs_lump_sum.ipynb  dca_vs_lump_sum_fr.ipynb  investment_utils.py  market_data.py
content/data/: msci_world.json
lump_sum_vs_dca/: __init__.py
scripts/: inject_custom_css.py
templates/blog/: index.html.j2
